--- a/yaml/cookbook/00_datakit_dataset_mt.yml
+++ b/yaml/cookbook/00_datakit_dataset_mt.yml
@@ -10,6 +10,7 @@ mt_daily_env:
   play:
     - name: mt_day_1_std
       sync_result: true
+#      keep_result: true
       cooks:
         - fetch_dataset:
             columns:
@@ -50,6 +51,7 @@ mt_daily_env:
 
     - name: mt_day_2_std
       sync_result: true
+#      keep_result: true
       cooks:
         - fetch_dataset:
             columns:
@@ -79,6 +81,7 @@ mt_daily_env:
             - '[日期] != 0'
     - name: mt_day_3_std
       sync_result: true
+#      keep_result: true
       cooks:
         - fetch_dataset:
             columns:
@@ -109,6 +112,7 @@ mt_daily_env:
 
     - name: mt_day_2_3_dc_qs_order_lookup_map
       sync_result: true
+#      keep_result: true
       cooks:
         - use_df:
             key: mt_day_2_std
@@ -132,6 +136,7 @@ mt_daily_env:
 
     - name: mt_day_30_std
       sync_result: true
+#      keep_result: true
       cooks:
         - fetch_dataset:
             columns:
@@ -163,6 +168,7 @@ mt_daily_env:
 
     - name: mt_day_30_dc_qs_order_std_lookup_map
       sync_result: true
+#      keep_result: true
       cooks:
         - use_df:
             key: mt_day_30_std
@@ -171,7 +177,7 @@ mt_daily_env:
               订单ID: unicode
         - set_meta_month_column:
             - month
-            
+
     - name: mt_day_4_std
       sync_result: true
       cooks:
@@ -222,6 +228,7 @@ mt_daily_env:
             template_code: mt_day_12
     - name: mt_day_13_std
       sync_result: true
+#      keep_result: true
       cooks:
         - fetch_dataset:
             datakit_pull_way: last_day
@@ -335,6 +342,7 @@ mt_daily_env:
             template_code: mt_day_25
     - name: mt_day_18_std
       sync_result: true
+#      keep_result: true
       cooks:
         - fetch_dataset:
             columns:
@@ -625,6 +633,7 @@ mt_month_env:
             template_code: mt_month_29
     - name: mt_month_21_std
       sync_result: true
+#      keep_result: true
       cooks:
         - fetch_dataset:
             columns:
