--- a/yaml/cookbook/00_datakit_dataset_ele.yml
+++ b/yaml/cookbook/00_datakit_dataset_ele.yml
@@ -55,6 +55,7 @@ ele_month_env:
         - parse_time_span_cols:
             - 业务交易时间
       sync_result: true
+#      keep_result: true
       name: ele_month_35_std
     - cooks:
         - use_df:
@@ -64,6 +65,7 @@ ele_month_env:
             - [骑手ID, 站点ID, 订单号, 运单号]
         - df_reset_index: []
       sync_result: true
+#      keep_result: True
       name: ele_month_35_std_lookup_map
     - cooks:
         - fetch_dataset:
@@ -93,6 +95,7 @@ ele_month_env:
             - month
       name: ele_month_37_std
       sync_result: true
+#      keep_result: true
     - name: ele_month_37_std_ext
       sync_result: true
       cooks:
@@ -194,6 +197,7 @@ ele_month_env:
             drop_stash: true
     - name: ele_month_39_std
       sync_result: true
+#      keep_result: true
       cooks:
         - fetch_dataset:
             columns:
@@ -255,6 +259,7 @@ ele_month_env:
         - set_meta_month_column:
             - month
       sync_result: true
+#      keep_result: true
       name: ele_month_41_std
     - cooks:
         - use_df:
@@ -279,6 +284,7 @@ ele_month_env:
             dataset_cate: raw
             template_code: ele_month_33
       sync_result: true
+#      keep_result: true
       name: ele_month_33_std
     - cooks:
         - use_df:
@@ -315,20 +321,6 @@ ele_month_env:
         - df_reset_index: []
         - push_dataset:
             key: ele_month_33_std_tmp
-
-        - use_df:
-            key: ele_month_33_std_tmp
-        - df_select:
-            - '[问题单类型] in @p1'
-            - p1: [配送原因取消, 骑手T+12超时,坏单,超时,虚假配送,违规送达]
-        - df_groupby:
-            by: [ 账单时间, 骑手ID, 站点ID ]
-        - df_count:
-            column: 运单号
-            rename: 问题单总单量
-        - df_reset_index: [ ]
-        - stash_push_df: [ ]
-
         - use_df:
             key: ele_month_33_std_tmp
         - df_select:
@@ -341,18 +333,6 @@ ele_month_env:
             rename: 虚假配送单量
         - df_reset_index: []
         - stash_push_df: []
-
-        - stash_join_df:
-            on: [ 账单时间, 骑手ID, 站点ID ]
-            how: right
-            fillna: 0
-            drop_stash: true
-            force_rebuild_dask: true
-            dtypes:
-              问题单总单量: int64
-              虚假配送单量: int64
-        - stash_push_df: []
-
         - use_df:
             key: ele_month_33_std_tmp
         - df_select:
@@ -365,17 +345,6 @@ ele_month_env:
             rename: 配送原因取消单量
         - df_reset_index: []
         - stash_push_df: []
-
-        - stash_join_df:
-            on: [ 账单时间, 骑手ID, 站点ID ]
-            how: right
-            fillna: 0
-            drop_stash: true
-            force_rebuild_dask: true
-            dtypes:
-              配送原因取消单量: int64
-        - stash_push_df: [ ]
-
         - use_df:
             key: ele_month_33_std_tmp
         - df_select:
@@ -388,17 +357,6 @@ ele_month_env:
             rename: 骑手T12超时单量
         - df_reset_index: []
         - stash_push_df: []
-
-        - stash_join_df:
-            on: [ 账单时间, 骑手ID, 站点ID ]
-            how: right
-            fillna: 0
-            drop_stash: true
-            force_rebuild_dask: true
-            dtypes:
-              骑手T12超时单量: int64
-        - stash_push_df: [ ]
-
         - use_df:
             key: ele_month_33_std_tmp
         - df_select:
@@ -411,17 +369,6 @@ ele_month_env:
             rename: 坏单单量
         - df_reset_index: []
         - stash_push_df: []
-
-        - stash_join_df:
-            on: [ 账单时间, 骑手ID, 站点ID ]
-            how: right
-            fillna: 0
-            drop_stash: true
-            force_rebuild_dask: true
-            dtypes:
-              坏单单量: int64
-        - stash_push_df: [ ]
-
         - use_df:
             key: ele_month_33_std_tmp
         - df_select:
@@ -434,17 +381,6 @@ ele_month_env:
             rename: 超时单量
         - df_reset_index: []
         - stash_push_df: []
-
-        - stash_join_df:
-            on: [ 账单时间, 骑手ID, 站点ID ]
-            how: right
-            fillna: 0
-            drop_stash: true
-            force_rebuild_dask: true
-            dtypes:
-              超时单量: int64
-        - stash_push_df: [ ]
-
         - use_df:
             key: ele_month_33_std_tmp
         - df_select:
@@ -460,11 +396,16 @@ ele_month_env:
         # merge
         - stash_join_df:
             on: [账单时间, 骑手ID, 站点ID]
-            how: right
+            how: outer
             fillna: 0
             drop_stash: true
             force_rebuild_dask: true
             dtypes:
+              虚假配送单量: int64
+              配送原因取消单量: int64
+              骑手T12超时单量: int64
+              坏单单量: int64
+              超时单量: int64
               违规送达单量: int64
         - df_reset_index: []
         - set_meta_month_column:
@@ -474,6 +415,7 @@ ele_month_env:
 # 新增运单详情月账单 0927
     - name: ele_month_57_std
       sync_result: true
+      keep_result: true
       cooks:
         - fetch_dataset:
             datakit_pull_way: last_day
@@ -495,6 +437,7 @@ ele_month_env:
 # 1-30日累计配送费账单
     - name: ele_month_58_std
       sync_result: true
+#      keep_result: true
       cooks:
         - fetch_dataset:
             datakit_pull_way: last_day
@@ -686,6 +629,7 @@ ele_daily_env:
         - parse_time_span_cols:
             - 业务交易时间
       sync_result: true
+#      keep_result: true
       name: ele_day_34_std
     - cooks:
         - use_df:
@@ -694,10 +638,11 @@ ele_daily_env:
         - drop_duplicates:
             - [骑手ID, 站点ID, 订单号, 运单号]
         - df_reset_index: []
-        - dask_persist_compute:
-            sync_compute: true
-            chunk_size: 10000
+#        - dask_persist_compute:
+#            sync_compute: true
+#            chunk_size: 10000
       sync_result: true
+#      keep_result: true
       name: ele_day_34_std_lookup_map
     - cooks:
         - fetch_dataset:
@@ -728,6 +673,7 @@ ele_daily_env:
         - set_meta_month_column:
             - month
       sync_result: true
+#      keep_result: true
       name: ele_day_36_std
     - cooks:
         - use_df:
@@ -856,6 +802,7 @@ ele_daily_env:
         - set_meta_month_column:
             - month
       sync_result: true
+#      keep_result: true
       name: ele_day_38_std
     - cooks:
         - use_df:
@@ -895,6 +842,7 @@ ele_daily_env:
         - set_meta_month_column:
             - month
       sync_result: true
+#      keep_result: true
       name: ele_day_40_std
     - cooks:
         - use_df:
@@ -920,6 +868,7 @@ ele_daily_env:
             dataset_cate: raw
             template_code: ele_day_32
       sync_result: true
+#      keep_result: true
       name: ele_day_32_std
     - cooks:
         - use_df:
@@ -952,8 +901,8 @@ ele_daily_env:
               key: ele_day_34_std_lookup_map_mini
             on: 运单号
             how: left
-            force_rebuild_dask: true
-            chunk_size: 2000
+#            force_rebuild_dask: true
+#            chunk_size: 2000
             # left_index: true
             # right_index: true
         - push_dataset:
@@ -1036,7 +985,7 @@ ele_daily_env:
             how: outer
             fillna: 0
             drop_stash: true
-            force_rebuild_dask: true
+#            force_rebuild_dask: true
             dtypes:
               虚假配送单量: int64
               配送原因取消单量: int64
