--- a/yaml/cookbook/new_t1_compass/process_middle_table_ele.yml
+++ b/yaml/cookbook/new_t1_compass/process_middle_table_ele.yml
@@ -2482,30 +2482,6 @@ ele_daily_env:
       cooks:
         - fetch_dataset:
             dataset_cate: raw
-            template_code: ele_day_60
-#            month_offset: -1
-            datakit_pull_way: last_day
-            ignore_null_error: true
-            empty_df_record:
-              城市: '-'
-              团队ID: 0
-            columns: [城市,团队ID]
-            rename:
-              城市: coach_team_name
-              团队ID: vendor_dc_id
-        - run_py:
-            - |
-              df=to_df(df)
-              df=df[df['vendor_dc_id'].notnull()]
-              result= to_dd(df)
-        - drop_duplicates:
-            subset:
-              - coach_team_name
-              - vendor_dc_id
-        - push_dataset:
-            key: team_coach_team_name
-        - fetch_dataset:
-            dataset_cate: raw
             template_code: ele_day_74
             ignore_null_error: true
             empty_df_record:
@@ -2525,7 +2501,7 @@ ele_daily_env:
               - 老骑手离职率（不含高价）
               - 骑手离职率（不含高价）
             rename:
-              城市: city_name
+              城市: coach_team_name
               站点ID: vendor_dc_id
               站点名称: dc_name
               新骑手离职率（不含高价）: new_knight_leave_ratio
@@ -2534,6 +2510,7 @@ ele_daily_env:
         - run_py:
             - |
               df = to_df(df)
+              df=df[df['leave_ratio'].notnull()]
               need2 = df[df['leave_ratio'].map(str).str.contains('-')]
               need2['leave_ratio']=0
               need = df[df['leave_ratio'].map(str).str.contains('%')]
@@ -2550,20 +2527,6 @@ ele_daily_env:
           ### 使用主体匹配表
         - use_df:
             key: supplier_vendor_dc
-        - run_py:
-            - |
-              df=to_df(df)
-              df['vendor_dc_id']=[u'%s' % i for i in df[u'vendor_dc_id']]
-              result=to_dd(df)
-        - stash_push_df: []
-        - stash_join_df:
-            how: right
-            on: vendor_dc_id
-            drop_stash: True
-        - stash_push_df: []
-        ### 使用私教匹配表
-        - use_df:
-            key: team_coach_team_name
         - run_py:
             - |
               df=to_df(df)
@@ -2608,13 +2571,14 @@ ele_daily_env:
               - 老骑手离职率（不含高价）
               - 骑手离职率（不含高价）
             rename:
-              城市: city_name
+              城市: coach_team_name
               新骑手离职率（不含高价）: new_knight_leave_ratio
               老骑手离职率（不含高价）: old_knight_leave_ratio
               骑手离职率（不含高价）: leave_ratio
         - run_py:
             - |
               df = to_df(df)
+              df=df[df['leave_ratio'].notnull()]
               need2 = df[df['leave_ratio'].map(str).str.contains('-')]
               need2['leave_ratio']=0
               need = df[df['leave_ratio'].map(str).str.contains('%')]
@@ -2624,14 +2588,6 @@ ele_daily_env:
               result = pd.concat([need_1,need,need2])
         - df_to_float:
             - leave_ratio
-        - stash_push_df: []
-        - use_df:
-            key: city_coach_map
-        - stash_push_df: []
-        - stash_join_df:
-            how: inner
-            on: city_name
-            drop_stash: True
         - stash_push_df: []
         - use_df:
             key: dimission_tendency_analysis_dc
@@ -5165,32 +5121,7 @@ ele_month_env:
       cooks:
         - fetch_dataset:
             dataset_cate: raw
-            template_code: ele_day_60
-#            month_offset: -1
-            datakit_pull_way: last_day
-            ignore_null_error: true
-            empty_df_record:
-              城市: '-'
-              团队ID: 0
-            columns: [城市,团队ID]
-            rename:
-              城市: coach_team_name
-              团队ID: vendor_dc_id
-        - run_py:
-            - |
-              df=to_df(df)
-              df=df[df['vendor_dc_id'].notnull()]
-              result= to_dd(df)
-        - drop_duplicates:
-            subset:
-              - coach_team_name
-              - vendor_dc_id
-        - push_dataset:
-            key: team_coach_team_name
-        - fetch_dataset:
-            dataset_cate: raw
             template_code: ele_day_74
-#            month_offset: -1
             ignore_null_error: true
             empty_df_record:
               meta_day: 0
@@ -5209,7 +5140,7 @@ ele_month_env:
               - 老骑手离职率（不含高价）
               - 骑手离职率（不含高价）
             rename:
-              城市: city_name
+              城市: coach_team_name
               站点ID: vendor_dc_id
               站点名称: dc_name
               新骑手离职率（不含高价）: new_knight_leave_ratio
@@ -5218,6 +5149,7 @@ ele_month_env:
         - run_py:
             - |
               df = to_df(df)
+              df=df[df['leave_ratio'].notnull()]
               need2 = df[df['leave_ratio'].map(str).str.contains('-')]
               need2['leave_ratio']=0
               need = df[df['leave_ratio'].map(str).str.contains('%')]
@@ -5234,20 +5166,6 @@ ele_month_env:
           ### 使用主体匹配表
         - use_df:
             key: supplier_vendor_dc
-        - run_py:
-            - |
-              df=to_df(df)
-              df['vendor_dc_id']=[u'%s' % i for i in df[u'vendor_dc_id']]
-              result=to_dd(df)
-        - stash_push_df: []
-        - stash_join_df:
-            how: right
-            on: vendor_dc_id
-            drop_stash: True
-        - stash_push_df: []
-        ### 使用私教匹配表
-        - use_df:
-            key: team_coach_team_name
         - run_py:
             - |
               df=to_df(df)
@@ -5279,7 +5197,6 @@ ele_month_env:
             dataset_cate: raw
             template_code: ele_day_73
             ignore_null_error: true
-#            month_offset: -1
             empty_df_record:
               meta_day: 0
               城市: '-'
@@ -5293,13 +5210,14 @@ ele_month_env:
               - 老骑手离职率（不含高价）
               - 骑手离职率（不含高价）
             rename:
-              城市: city_name
+              城市: coach_team_name
               新骑手离职率（不含高价）: new_knight_leave_ratio
               老骑手离职率（不含高价）: old_knight_leave_ratio
               骑手离职率（不含高价）: leave_ratio
         - run_py:
             - |
               df = to_df(df)
+              df=df[df['leave_ratio'].notnull()]
               need2 = df[df['leave_ratio'].map(str).str.contains('-')]
               need2['leave_ratio']=0
               need = df[df['leave_ratio'].map(str).str.contains('%')]
@@ -5309,14 +5227,6 @@ ele_month_env:
               result = pd.concat([need_1,need,need2])
         - df_to_float:
             - leave_ratio
-        - stash_push_df: []
-        - use_df:
-            key: city_coach_map
-        - stash_push_df: []
-        - stash_join_df:
-            how: inner
-            on: city_name
-            drop_stash: True
         - stash_push_df: []
         - use_df:
             key: dimission_tendency_analysis_dc
@@ -5341,7 +5251,6 @@ ele_month_env:
         - add_cols:
             - dimension: "C"
 
-
     - name: dimission_tendency_analysis
       sync_result: true
       cooks:
@@ -5353,6 +5262,7 @@ ele_month_env:
         - stash_push_df: []
         - stash_concat_df:
             drop_stash: true
+
 
 
 
